fix menu covering county name

--- a/css/theme.css
+++ b/css/theme.css
@@ -305,7 +305,7 @@ body,
 	text-decoration: none;
 }
 /* If there is both a unit and site name,
- * site name gets the unit's styling and then 
+ * site name gets the unit's styling and then
  * a border.
  */
 .isu-wordmark-sitename_unit {
@@ -327,16 +327,14 @@ body,
     max-width: 300px;
   }
   .isu-wordmark-sitename {
-    padding-left: 0px;
     padding-bottom: 0px;
+	  padding-left: 2%;
  }
 }
 
 @media screen and (max-width : 1199px) {
   .isu-wordmark-sitename {
-    width: 50%;
     margin-top: -1%;
-
   }
 }
 
@@ -385,11 +383,11 @@ body,
   padding: 1rem;
 }
 .isu-form-type_radio {
-  float:left; 
-  margin:0 20px 0 0;  
+  float:left;
+  margin:0 20px 0 0;
 }
 div#edit-search-broadness {
-  margin:0 0 0 15px; 
+  margin:0 0 0 15px;
 }
 /* Specific to 404 Page search */
 .four-zero-four .isu-search > form {
@@ -503,7 +501,7 @@ div#edit-search-broadness {
 		border-radius: 0;
 	}
   .isu-region_header-second {
-    display: none; 
+    display: none;
   }
 }
 @media screen and (max-width : 1199px) {
@@ -596,7 +594,7 @@ div#edit-search-broadness {
   margin-top: 0px;
   margin-bottom: 0px;
   }
-} 
+}
 
 /* Toggle the search on mobile */
 
@@ -731,7 +729,7 @@ div#edit-search-broadness {
 		padding: 2rem;
 		min-height: 1000px;
 		min-width: 100vw;
-    margin-top: 1.5%;
+		margin-top: 2rem;
 	}
   .isu-menu-navbar_wrap {
     width: 100%;
@@ -764,8 +762,8 @@ div#edit-search-broadness {
   }
 }
 /* --- Dropdowns --- */
-/* We are not using Bootstrap 4's Dropdown utility because it is not 
- * optimized to be accessible and keyboard navigable in the way we need. 
+/* We are not using Bootstrap 4's Dropdown utility because it is not
+ * optimized to be accessible and keyboard navigable in the way we need.
  * Our version is based on the black ISU Navbar's method, which establishes
  * a consistent behavior. Javascript can be found in isu-main-menu.js.
  */
@@ -784,7 +782,7 @@ div#edit-search-broadness {
   font-family: "FontAwesome";
 }
 .isu-dropdown-toggle_mobile {
-  display: none; 
+  display: none;
 }
 .isu-dropdown-menu {
   position: absolute;
@@ -903,7 +901,7 @@ a.isu-dropdown-submenu {
     margin-left: 1rem;
   }
   .isu-dropdown-item {
-	background-color: #eeeeee !important; 
+	background-color: #eeeeee !important;
   }
 	.isu-dropdown-toggle_mobile .svg-inline--fa {
 		color: var(--burgundy);
@@ -1160,7 +1158,7 @@ li article:not(.isu-user):not(.isu-search_collapse) {
 .isu-block-title {
   margin-bottom: 0.75rem;
   line-height: 1.25;
-  font-weight: 700; 
+  font-weight: 700;
 	padding: 0 0 13px 0;
 	letter-spacing: 0;
 	font-family: Merriweather,serif;
@@ -1959,14 +1957,14 @@ a.tabledrag-handle .handle {
 		padding-bottom: 20px;
 	}
   footer .row, .col-lg-3 {
-    display: grid; 
+    display: grid;
     max-width: 100%;
   }
   .isu-footer .col-sm-6.col-md-6.col-lg-3:nth-of-type(1) {
     order: 1;
   }
   .isu-footer .col-sm-6.col-md-6.col-lg-3:nth-of-type(2) {
-    order: 4; 
+    order: 4;
     grid-column: span 4;
   }
   .isu-footer .col-sm-6.col-md-6.col-lg-3:nth-of-type(3) {
